fix footer overflow

--- a/src/components/Footer/Footer.styles.css
+++ b/src/components/Footer/Footer.styles.css
@@ -1,5 +1,5 @@
 #footer-section {
-    width: 100vw;
+    width: auto;
     height: 15vh;
     background-color: #030303;
     display: flex;
